force-app/main/default/objects/Assessment__c/Assessment__c.object-meta.xml
<CustomObject>
    <description>Digital assessment captured by the practitioner for an accepted Assignment. INT-011.</description>
    <label>Assessment</label>
    <pluralLabel>Assessments</pluralLabel>
    <nameField>
        <displayFormat>ASM-{00000}</displayFormat>
        <label>Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>