force-app/main/default/objects/Assessment__c/fields/Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date__c</fullName>
    <label>Assigned Date</label>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Date</type>
</CustomField>