force-app/main/default/objects/Assessment__c/fields/Escalated_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Date__c</fullName>
    <label>Escalated Date</label>
    <type>Date</type>
</CustomField>