force-app/main/default/objects/Assessment__c/fields/Parent_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Parent_Assessment__c</fullName>
    <description>Present but unused in the INT-011 core build; hosts the specialist re-referral follow-on (a child Assessment spawned from a parent).</description>
    <label>Parent Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Child Assessments</relationshipLabel>
    <relationshipName>Child_Assessments</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>