force-app/main/default/objects/Assessment__c/fields/Treatment_Type__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Type__c</fullName>
    <label>Treatment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Oncology</fullName><default>false</default><label>Oncology</label></value>
            <value><fullName>Cardiology</fullName><default>false</default><label>Cardiology</label></value>
            <value><fullName>Orthopaedic</fullName><default>false</default><label>Orthopaedic</label></value>
            <value><fullName>General</fullName><default>true</default><label>General</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>